Update Chat creation routine

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Android_exam"
         tools:targetApi="31">
         <activity
-            android:name=".activities.ChatListActivity$CreateChatActivity"
+            android:name=".activities.CreateChatActivity"
             android:exported="false" />
         <activity
             android:name=".activities.SignUpActivity"
